<resources>
    <string name="app_name">Explora</string>
    <string name="action_settings">Settings…</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>
    <string name="location_service_warning_title">Location services required!</string>
    <string name="location_service_warning">Location services are required for greater accuracy. Do you want to activate them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="iv_card_imagery">Item imagery</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_ignore">Ignore</string>
    <string name="dialog_button_settings">Settings…</string>
    <string name="dialog_message_no_connection">No internet connection! Check your settings and try again!</string>
    <string name="dialog_message_error">Something goes wrong retrieving data from server due to connection problems. Please try again later!</string>
    <string name="dialog_message_db_error">Something goes wrong managing db!</string>
    <string name="dialog_title_uhoh">Uh Oh!</string>
    <string name="dialog_title_warning">Warning!</string>
    <string name="no_results">No results!</string>
    <string name="button_refresh">Refresh</string>
    <string name="call">Call</string>
    <string name="url">Website</string>
    <string name="email">E-Mail</string>
    <string name="map">Map</string>
    <string name="earth">View on the map</string>
    <string name="no_phone_available">No phone number available!</string>
    <string name="no_email_available">No email address available!</string>
    <string name="no_url_available">No website available!</string>
    <string name="no_kml">No route on map available!</string>
    <string name="closed">Closed:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="no_mail_app">There is no email app on the device!</string>
    <string name="no_map_app">There is no map app on the device!</string>
    <string name="no_browser_app">There is no web browser app on the device!</string>
    <string name="no_dial_app">There is no dialer app on the device!</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="search_hint">Place, event or news</string>
    <string name="results">Results for: </string>
    <string name="no_search_results">No results for </string>
    <string name="no_image">No image available!</string>
    <string name="favorite">Favorite</string>
    <string name="share_place_message">I think you might like this place: </string>
    <string name="share_news_message">I think you could be interested in this news: </string>
    <string name="share_event_message">I think you could be interested in this event: </string>
    <string name="share_route_message">I think you might like this route:&#160;</string>
    <string name="share">Share</string>
    <string name="favorite_added"> added to the favorites\' list!</string>
    <string name="favorite_removed"> removed from the favorites\' list!</string>
    <string name="no_favorite">You have no favorite place!</string>
    <string name="notification_news_title">Latest news in </string>
    <string name="notification_event_title">New event in </string>
    <string name="feature_na">This feature is not yet available!</string>
    <string name="tback">Press back again to quit application</string>
    <string name="detail_picture">Detail main picture</string>
    <string name="too_short">Search query is too short!</string>
    <string name="earth_warning_title">App needed!</string>
    <string name="earth_warning_message">It seems that Google Earth is not installed in your device. To view this route on the map, you need an application that can read .kml route file.</string>
    <string name="earth_warning_positive">Get Earth!</string>
    <string name="earth_warning_neutral">Open it</string>
    <string name="earth_warning_negative">@string/cancel</string>
    <string name="no_app">There is no appropriate application on your device!</string>
    <string name="remember_choose">Remember this choose?</string>
    <string name="developed">Designed and developed by</string>
    <string name="explora_mail" translatable="false">info@exploracity.it</string>
    <string name="explora_web" translatable="false">www.exploracity.it</string>
    <string name="copyright">&#169; MAG Technologies 2015. All rights reserved.</string>
    <string name="android_logo_attribution">The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="title_activity_search_results" translatable="false">SearchResultsActivity</string>
    <string name="drawer_default">Choose the default start view…</string>
    <string name="general_settings">General settings</string>
    <string name="clear_favorite">Clear favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="r_u_sure_title">Are you sure?</string>
    <string name="sure_positive">I\'m sure!</string>
    <string name="do_not_negative">Don\'t do it!</string>
    <string name="erase_favorite_message">This will delete your favorite list!</string>
    <string name="search_title">Search</string>
    <string name="search_message">This will delete your search history!</string>
    <string name="clear_history">Clear search history</string>
    <string name="alerts_title">Alerts</string>
    <string name="restore_alerts">Restore application alerts</string>
    <string name="restore_alerts_message">Do you want to restore all application alerts? </string>
    <string name="title_activity_credits" translatable="false">CreditsActivity</string>
    <string name="report"><u>Suggest a change</u></string>
    <string name="accessible">Accessible</string>
    <string name="mag_tagline">Web Design &amp; Android development</string>
    <string name="texts_attribution">Texts attributions:\nGuida Turistica dei Monti Lepini</string>
    <string name="disclaimer">Disclaimer:\nAll contents (texts, images, graphics, layout etc.) of this app, belong to their respective owners. Texts, pictures, graphics, materials present in the application can not be published, rewritten, marketed, distributed, neither via radio or video, by users and third parties in general, in any way or in any form unless prior permission from the authors.\nThe contents offered are prepared with great care, and subject to careful monitoring. We disclaim, however, any liability, direct and indirect, towards users and in general of any third party, for any inaccuracies, errors, omissions, damages (direct, indirect, consequential, punishable) arising from such content.\n\nTrekking Routes are indicative. Use extra caution, especially in the mountain trails. Rely on expert guides, if necessary.</string>
    <string name="dmca" translatable="false"><u>DMCA</u></string>
    <string name="privacy" translatable="false"><u>Privacy</u></string>
    <string name="dmca_mail" translatable="false">report@exploracity.it</string>
    <string name="explora_privacy" translatable="false">http://www.exploracity.it/privacy</string>
    <string name="tts_na">Reading service not available!</string>
    <string name="tts_press_again">Press again to stop</string>
    <string name="dummy_text" translatable="false">Dummy text</string>
    <string name="content_fullscreen_image">Content Fullscreen image</string>
    <string name="drawer_menu_icon">Drawer Menu Icon</string>
    <string name="go_fullscreen">Open fullscreen image</string>
    <string name="gallery_next_image">Next image</string>
    <string name="gallery_prev_image">Previous image</string>
    <string name="description_icon">Description</string>
    <string name="tts_icon">Listen description</string>
    <string name="expand_description">Expand/collapse text</string>
    <string name="info_icon">General information</string>
    <string name="phone_icon">Phone number</string>
    <string name="mail_icon">Email address</string>
    <string name="url_icon">Website address</string>
    <string name="city_image">City image</string>
    <string name="app_logo">Application Logo</string>
    <string name="mag_logo">M.A.G. Technologies Logo</string>
    <string name="android_logo">Android Logo</string>
    <string name="event_image">Event image</string>
    <string name="opening_time_icon">Opening time</string>
    <string name="address_icon">Address</string>
    <string name="tag_icon">Tags</string>
    <string name="news_image">News\' image</string>
    <string name="place_image">Place image</string>
    <string name="event_time">Event time</string>
    <string name="accessibility_icon">Accessibility</string>
    <string name="route_image">Trekking route\'s image</string>
    <string name="duration_icon">Duration</string>
    <string name="length_icon">Length</string>
    <string name="level_icon">Level</string>
    <string name="search_result_icon">Search result</string>
    <string name="app_needs_connection">Explora needs internet connection to manage cities\' list. Please check your connection settings and try again! </string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="city_logo">City\'s Logo</string>
    <string name="city_selector">Select City</string>
    <string name="select_city">Select a City:</string>
    <string name="changing_city">Changing City, please wait&#8230;</string>
    <string name="generic_news_notification">Latest news</string>
    <string name="generic_event_notification">New event</string>
    <string name="city_notification_button">Choose notifications to activate for the City</string>
    <string name="receive_notification">Receive alerts</string>
    <string name="news">News</string>
    <string name="event">Events</string>
    <string name="cancel">Cancel</string>
    <string name="disable_one_hour">Disable for 1 hour</string>
    <string name="disable_two_hours">Disable for 2 hours</string>
    <string name="disable_eight_hours">Disable for 8 hours</string>
    <string name="disable_till_eight_am">Disable until 8.00 AM</string>
    <string name="off" translatable="false">Off</string>
    <string name="enabled">Enabled</string>
    <string name="notifications">Notifications</string>
    <string name="to_see">To See</string>
    <string name="about">About</string>
    <string name="eat">Eat</string>
    <string name="sleep">Sleep</string>
    <string name="services">Services</string>
    <string name="trekking_routes">Trekking Routes</string>
    <string name="other">Other</string>
    <string name="nearby_cities">Nearby Cities</string>
    <string name="settings">Settings…</string>
    <string name="credits" translatable="false">Credits</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="experts_only">Experts Only</string>
    <string name="sound">Alert sound</string>
    <string name="disabled_until">Disabled until&#160;</string>
    <string name="disabled_until2">Disabled until&#160;</string>
    <string name="underscore" translatable="false">_</string>
    <string name="cookies_law">For better User Experience, this app collect some user data as geolocation, cookies and usage data.\nMore info about this on www.exploracity.it/privacy</string>
    <string name="cookie_law_title" translatable="false">Privacy &amp; cookies</string>
    <string name="accept">I accept!</string>
    <string name="privacy_policy">Go to Privacy Policy</string>
    <string name="cookies_picture">There is a funny cookie jar picture</string>
</resources>