<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright ZeroApp(c) 2015. All right reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sound_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/sound" />

    <RadioGroup
        android:id="@+id/notifications_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sound_switch"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp">

        <RadioButton
            android:id="@+id/rb_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/enabled" />

        <RadioButton
            android:id="@+id/rb_diasble_1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/disable_one_hour" />

        <RadioButton
            android:id="@+id/rb_diasble_2h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/disable_two_hours" />

        <RadioButton
            android:id="@+id/rb_disable_8h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/disable_eight_hours" />

        <RadioButton
            android:id="@+id/rb_disable_8am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/disable_till_eight_am" />

        <RadioButton
            android:id="@+id/rb_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/off" />
    </RadioGroup>

    <TextView
        android:id="@+id/enabling_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifications_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/enabled"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />
</RelativeLayout>