<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:background="@color/primaryColor"
    >

    <TextView
        android:padding="8dp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/cookie_law_title"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/cookie_disclaimer"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:gravity="top|center"
        android:text="@string/cookies_law"
        android:textSize="@dimen/cookies_text"
        android:layout_centerInParent="true"
        android:textColor="@color/primary_text_color"/>

    <ImageView
        android:id="@+id/cookie_jar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/img_cookie_jar"
        android:layout_below="@+id/cookie_disclaimer"
        android:contentDescription="@string/cookies_picture"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/accept"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="@dimen/action_button_td_padding"
        android:paddingLeft="@dimen/action_button_lr_padding"
        android:paddingRight="@dimen/action_button_lr_padding"
        android:paddingTop="@dimen/action_button_td_padding"
        android:textColor="@color/accentColor"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/buttonPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/privacy_policy"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="@dimen/action_button_td_padding"
        android:paddingLeft="@dimen/action_button_lr_padding"
        android:paddingRight="@dimen/action_button_lr_padding"
        android:paddingTop="@dimen/action_button_td_padding"
        android:textColor="@color/accentColor"
        android:textSize="14sp"/>
</RelativeLayout>